# autoShift

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PRD.md  README.md  api_contract.md  architecture.md  database_schema.sql  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml  release.yml
backend/: .env.example  README.md  go.mod  go.sum  main.go
backend/ai/: generator.go
backend/config/: config.go
backend/handlers/: employee.go  export.go  schedule.go
backend/middleware/: auth.go
backend/models/: db.go  employee.go  holiday.go  schedule.go  tenant.go  user.go
backend/services/: holiday.go  scheduler.go  validator.go
docs/: constraints.md  desktop.md  quickstart.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/calendar/: CalendarGrid.tsx  CalendarToolbar.tsx
frontend/src/components/employee/: EmployeeFormDialog.tsx  EmployeeList.tsx
frontend/src/components/sidebar/: Sidebar.tsx
frontend/src/components/ui/: dialog.tsx
frontend/src/lib/api/: index.ts
frontend/src/types/: index.ts
scripts/: build-sidecar.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
