[package]
name = "autoshift"
version = "1.0.0"
description = "autoShift - AI-powered Employee Shift Scheduler"
authors = ["ademaswahyu"]
edition = "2021"

[lib]
name = "autoshift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
